tests/algorithms/transpiler/Swift/data_structures/stacks/stack.error
exit status 1
/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:91:23: warning: forced cast of 'Stack' to same type has no effect
 89 |     }
 90 |     func push(_ s: inout Stack, _ item: Int) {
 91 |         if is_full((s as! Stack)) {
    |                       `- warning: forced cast of 'Stack' to same type has no effect
 92 |             _ = fatalError("stack overflow")
 93 |         }

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:97:24: warning: forced cast of 'Stack' to same type has no effect
 95 |     }
 96 |     func pop(_ s: inout Stack) -> Int {
 97 |         if is_empty((s as! Stack)) {
    |                        `- warning: forced cast of 'Stack' to same type has no effect
 98 |             _ = fatalError("stack underflow")
 99 |         }

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:101:38: warning: conditional downcast from 'Int?' to 'Int' does nothing
 99 |         }
100 |         let n = Int(((s.items).count))
101 |         let val = (s.items[(n &- 1)] as? Int ?? 0)
    |                                      `- warning: conditional downcast from 'Int?' to 'Int' does nothing
102 |         s.items = (Array(s.items[0..<(n &- 1)]) as! [Int?])
103 |         return val

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:106:24: warning: forced cast of 'Stack' to same type has no effect
104 |     }
105 |     func peek(_ s: Stack) -> Int {
106 |         if is_empty((s as! Stack)) {
    |                        `- warning: forced cast of 'Stack' to same type has no effect
107 |             _ = fatalError("peek from empty stack")
108 |         }

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:109:56: warning: conditional downcast from 'Int?' to 'Int' does nothing
107 |             _ = fatalError("peek from empty stack")
108 |         }
109 |         return (s.items[(Int(((s.items).count)) &- 1)] as? Int ?? 0)
    |                                                        `- warning: conditional downcast from 'Int?' to 'Int' does nothing
110 |     }
111 |     func contains(_ s: Stack, _ item: Int) -> Bool {

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:114:29: warning: conditional downcast from 'Int?' to 'Int' does nothing
112 |         var i: Int = 0
113 |         while (i < Int(((s.items).count))) {
114 |             if ((s.items[i] as? Int ?? 0) == item) {
    |                             `- warning: conditional downcast from 'Int?' to 'Int' does nothing
115 |                 return true
116 |             }

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:126:49: warning: forced cast of 'Stack' to same type has no effect
124 |     func main() {
125 |         var s: Stack = make_stack(5)
126 |         print(_p(String(describing: is_empty((s as! Stack)))))
    |                                                 `- warning: forced cast of 'Stack' to same type has no effect
127 |         _ = push(&s, 0)
128 |         _ = push(&s, 1)

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:127:9: warning: using '_' to ignore the result of a Void-returning function is redundant
125 |         var s: Stack = make_stack(5)
126 |         print(_p(String(describing: is_empty((s as! Stack)))))
127 |         _ = push(&s, 0)
    |         `- warning: using '_' to ignore the result of a Void-returning function is redundant
128 |         _ = push(&s, 1)
129 |         _ = push(&s, 2)

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:128:9: warning: using '_' to ignore the result of a Void-returning function is redundant
126 |         print(_p(String(describing: is_empty((s as! Stack)))))
127 |         _ = push(&s, 0)
128 |         _ = push(&s, 1)
    |         `- warning: using '_' to ignore the result of a Void-returning function is redundant
129 |         _ = push(&s, 2)
130 |         print(_p(String(describing: Int(peek((s as! Stack))))))

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:129:9: warning: using '_' to ignore the result of a Void-returning function is redundant
127 |         _ = push(&s, 0)
128 |         _ = push(&s, 1)
129 |         _ = push(&s, 2)
    |         `- warning: using '_' to ignore the result of a Void-returning function is redundant
130 |         print(_p(String(describing: Int(peek((s as! Stack))))))
131 |         print(_p(String(describing: Int(size((s as! Stack))))))

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:130:49: warning: forced cast of 'Stack' to same type has no effect
128 |         _ = push(&s, 1)
129 |         _ = push(&s, 2)
130 |         print(_p(String(describing: Int(peek((s as! Stack))))))
    |                                                 `- warning: forced cast of 'Stack' to same type has no effect
131 |         print(_p(String(describing: Int(size((s as! Stack))))))
132 |         print(_p(String(describing: is_full((s as! Stack)))))

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:131:49: warning: forced cast of 'Stack' to same type has no effect
129 |         _ = push(&s, 2)
130 |         print(_p(String(describing: Int(peek((s as! Stack))))))
131 |         print(_p(String(describing: Int(size((s as! Stack))))))
    |                                                 `- warning: forced cast of 'Stack' to same type has no effect
132 |         print(_p(String(describing: is_full((s as! Stack)))))
133 |         _ = push(&s, 3)

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:132:48: warning: forced cast of 'Stack' to same type has no effect
130 |         print(_p(String(describing: Int(peek((s as! Stack))))))
131 |         print(_p(String(describing: Int(size((s as! Stack))))))
132 |         print(_p(String(describing: is_full((s as! Stack)))))
    |                                                `- warning: forced cast of 'Stack' to same type has no effect
133 |         _ = push(&s, 3)
134 |         _ = push(&s, 4)

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:133:9: warning: using '_' to ignore the result of a Void-returning function is redundant
131 |         print(_p(String(describing: Int(size((s as! Stack))))))
132 |         print(_p(String(describing: is_full((s as! Stack)))))
133 |         _ = push(&s, 3)
    |         `- warning: using '_' to ignore the result of a Void-returning function is redundant
134 |         _ = push(&s, 4)
135 |         print(_p(String(describing: is_full((s as! Stack)))))

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:134:9: warning: using '_' to ignore the result of a Void-returning function is redundant
132 |         print(_p(String(describing: is_full((s as! Stack)))))
133 |         _ = push(&s, 3)
134 |         _ = push(&s, 4)
    |         `- warning: using '_' to ignore the result of a Void-returning function is redundant
135 |         print(_p(String(describing: is_full((s as! Stack)))))
136 |         print(_p(String(describing: stack_repr((s as! Stack)))))

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:135:48: warning: forced cast of 'Stack' to same type has no effect
133 |         _ = push(&s, 3)
134 |         _ = push(&s, 4)
135 |         print(_p(String(describing: is_full((s as! Stack)))))
    |                                                `- warning: forced cast of 'Stack' to same type has no effect
136 |         print(_p(String(describing: stack_repr((s as! Stack)))))
137 |         print(_p(String(describing: Int(pop(&s)))))

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:136:51: warning: forced cast of 'Stack' to same type has no effect
134 |         _ = push(&s, 4)
135 |         print(_p(String(describing: is_full((s as! Stack)))))
136 |         print(_p(String(describing: stack_repr((s as! Stack)))))
    |                                                   `- warning: forced cast of 'Stack' to same type has no effect
137 |         print(_p(String(describing: Int(pop(&s)))))
138 |         print(_p(String(describing: Int(peek((s as! Stack))))))

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:138:49: warning: forced cast of 'Stack' to same type has no effect
136 |         print(_p(String(describing: stack_repr((s as! Stack)))))
137 |         print(_p(String(describing: Int(pop(&s)))))
138 |         print(_p(String(describing: Int(peek((s as! Stack))))))
    |                                                 `- warning: forced cast of 'Stack' to same type has no effect
139 |         print(_p(String(describing: ((s as! Stack).contains(1)))))
140 |         print(_p(String(describing: ((s as! Stack).contains(9)))))

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:139:52: error: value of type 'Stack' has no member 'contains'
137 |         print(_p(String(describing: Int(pop(&s)))))
138 |         print(_p(String(describing: Int(peek((s as! Stack))))))
139 |         print(_p(String(describing: ((s as! Stack).contains(1)))))
    |                                                    `- error: value of type 'Stack' has no member 'contains'
140 |         print(_p(String(describing: ((s as! Stack).contains(9)))))
141 |     }

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:140:52: error: value of type 'Stack' has no member 'contains'
138 |         print(_p(String(describing: Int(peek((s as! Stack))))))
139 |         print(_p(String(describing: ((s as! Stack).contains(1)))))
140 |         print(_p(String(describing: ((s as! Stack).contains(9)))))
    |                                                    `- error: value of type 'Stack' has no member 'contains'
141 |     }
142 |     _ = main()

/tmp/TestSwiftTranspiler_Algorithms_Golden256_data_structures_stacks_stack133173016/001/main.swift:142:5: warning: using '_' to ignore the result of a Void-returning function is redundant
140 |         print(_p(String(describing: ((s as! Stack).contains(9)))))
141 |     }
142 |     _ = main()
    |     `- warning: using '_' to ignore the result of a Void-returning function is redundant
143 |     let _benchEnd = _now()
144 |     let _benchMemEnd = _mem()
